# Digital_Annealer

./: .gitignore  Bruteforce.cpp  CMakeLists.txt  Non_CUDA_GPU_Simulated_Annealing.py  Plotting shit.ipynb  README.md  benchmark.sh  benchmark_results.csv  bruteforce_bench.sh  factorize.sh  mps_optim.py  multiseed_benchmark.sh  qubo_scaling.sh  run_all.sh  run_all_cuda.sh  run_single_cuda.sh  sa_ising.py  timing_results.txt  timing_results_par.txt  timing_results_seq.txt
Annealing on GH200/: run_all_cuda.sh  run_single_cuda.sh
Annealing on Mac/: Non_CUDA_GPU_Simulated_Annealing.py  timing_results_DA1.txt  timing_results_seq.txt
Benchmark/: benchmark.sh  qubo_scaling.csv  qubo_scaling.sh
Bruteforce/: Bruteforce.cpp  all_runs.csv  batch_coppersmith.sh  bruteforce_bench.sh  coppersmith.cpp  coppersmith_fast.cpp  coppersmith_results.csv  coppersmith_results_upto52.csv  err.txt  tune.sh
Factorize/: factorize.sh
Integer Factorization/: J_values_10403.csv  J_values_104927.csv  J_values_1099551473989.csv  J_values_11663.csv  J_values_3127.csv  J_values_571682899.csv  QUBO_Integer_Factorization.cpp  QUBO_Integer_Factorization.ipynb  QUBO_Matrix_from_N.cpp  assignment_constraints_10403.txt  assignment_constraints_104927.txt  assignment_constraints_1052651.txt  assignment_constraints_1099551473989.txt  assignment_constraints_1125899839733761.txt  assignment_constraints_11663.txt  assignment_constraints_15.txt  assignment_constraints_19043.txt  assignment_constraints_3127.txt  assignment_constraints_571682899.txt  assignment_constraints_6557.txt  col_idx_10403.csv  (+35 more)
(+148 files in other folders)
